# gemiiclitestrepo

./: .gitignore  GEMINI.md  README.md  main.py  pyproject.toml
dynamictooling/: agent.py  registry.py
samples/: summarize_files.py
tests/: test_agent.py  test_registry.py
