[project]
name = "dynamictooling"
version = "0.1.0"
description = "A module for creating dynamic tool agents with Gemini"
readme = "README.md"
authors = [
    { name = "Pratap Ramamurthy", email = "pratapram@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "google-genai>=1.64.0",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dynamictooling"]